Update build files to make JCS a true Apache Commons component. - Add site - Use Apache commons parent POM - The artifact id is now commons-jcs - Add some more reports - Fix one junit test - Promote myself ;-)
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/jcs/trunk@1156288 13f79535-47bb-0310-9956-ffa450edef68